Add blog feature and navigation

--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
+    "gray-matter": "^4.0.3",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
