--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
+    "katex": "^0.16.10",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "rehype-katex": "^7.0.0",
+    "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "remark-math": "^6.0.0",
+    "remark-rehype": "^11.1.0",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
