--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/remark-prism": "^1.3.7",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.10",
@@ -17,11 +18,13 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "rehype-katex": "^7.0.0",
+    "rehype-prism": "^2.3.2",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "remark-math": "^6.0.0",
     "remark-rehype": "^11.1.0",
+    "sharp": "^0.33.4",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
